16547
Consider compiling the following code with either 2.9.1 or scala-2.10.0.r25912-b20111031024940
```scala
class test {
 @java.lang.Deprecated(qwe = "wer")def ok(q:Int) = 1
 @java.lang.Deprecated("wer")def whereAmI(q:Int) = 1
}
```

You will get the following messages from compiler:
```scala
test.scala:2: error: unknown annotation argument name: qwe
 @java.lang.Deprecated(qwe = "wer")def ok(q:Int) = 1
                           ^
error: unknown annotation argument name: value
two errors found
```
the first one is ok, but the second doesn't show which line or file it is referring
